# openclaw-orchestration

./: .gitignore  AGENTS.md  DAILY_GIT_AUTOMATION_STATUS.md  DESIGN-STANDARDS.md  DEVELOPMENT_PROTOCOLS.md  HEARTBEAT.md  IDENTITY.md  IMPLEMENTATION_STATUS.md  MEMORY.md  ORCHESTRATOR_IMPROVEMENTS.md  README.md  RESEARCH_WORKFLOW_SYSTEM.md  SECURITY.md  SECURITY_FIX_COMPLETE.md  SOUL.md  SPEC-TEMPLATE.md  TECH-STACK.md  TOOLS.md  URGENT-ALERTS.md  USER.md  business-acquisition-research.skill  coi-tracking-validation.md  pyproject.toml  setup.py  sub-agent-design.skill  telegram-group-setup.skill  test-regulated-filter.md
.clawhub/: lock.json
.learnings/: CEO_VALIDATION_RULE.md  CONFIG_SAFETY_RULE.md  FEATURE_REQUESTS.md  LEARNINGS.md  ORCHESTRATOR_ROLE.md  RESEARCH_HANDOFF_PROTOCOL.md  SEARCH_API_INTEGRATION_PLAN.md
agent-dispatch/: agent_prompts.py  agent_runner.py  agent_supervisor.py  anthropic_provider.py  claude_code_provider.py  cli.py  compatibility.yaml  compatibility_check.py  config.py  data_retention.py  dispatch_db.py  google_provider.py  llm_provider.py  migrations.py  notification_delivery.py  ollama_provider.py  openai_provider.py  openclawd.config.yaml  openclawd_adapter.py  provider_registry.py  security.py  structured_logging.py  tool_registry.py  tool_translators.py  universal_tool.py  verification.py
agent-os/: README.md  config.yml  data-import-api-endpoints.md  prompt.md  ralph-core.sh  ralph-local.sh  ralph.sh
memory-db/: PRODUCTION_READY.md  README.md  auto_memory.py  backup_system.py  finalize_setup.py  google_drive_sync.py  memory_cli.py  (+5 more)
(+262 files in other folders)
